--- a/lab-1/lab-1.ipynb
+++ b/lab-1/lab-1.ipynb
@@ -18,10 +18,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "cb8f2e0f6557e26ae7f9255e456a9c399c0a069b15316ed1d8a2479b61cbf3bb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
