--- a/lab-1/lab-1.ipynb
+++ b/lab-1/lab-1.ipynb
@@ -5,7 +5,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"hello\"+\"World\")"
+   ]
   },
   {
    "cell_type": "code",
