Add link to github

--- a/lab-1/Laboratorio_1 - Copy (1).ipynb
+++ b/lab-1/Laboratorio_1 - Copy (1).ipynb
@@ -66,35 +66,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "<>:1: SyntaxWarning: 'list' object is not callable; perhaps you missed a comma?\n",
-            "<>:1: SyntaxWarning: 'list' object is not callable; perhaps you missed a comma?\n",
-            "/tmp/ipykernel_4319/3938103649.py:1: SyntaxWarning: 'list' object is not callable; perhaps you missed a comma?\n",
-            "  [cap.png](Lab)\n",
-            "/tmp/ipykernel_4319/3938103649.py:1: SyntaxWarning: 'list' object is not callable; perhaps you missed a comma?\n",
-            "  [cap.png](Lab)\n",
-            "/tmp/ipykernel_4319/3938103649.py:1: SyntaxWarning: 'list' object is not callable; perhaps you missed a comma?\n",
-            "  [cap.png](Lab)\n"
-          ]
-        },
-        {
-          "ename": "NameError",
-          "evalue": "name 'cap' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m [cap\u001b[39m.\u001b[39mpng](Lab)\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'cap' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import random\n",
         "\n",
@@ -217,6 +191,14 @@
       },
       "source": [
         "**Poner el link del reposotorio en Github acá**"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "https://github.com/TaniaBer2/Scientific-computing-labs"
       ]
     },
     {
