--- a/lab-1/lab1_entrega.ipynb
+++ b/lab-1/lab1_entrega.ipynb
@@ -12,6 +12,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "mPcqihmgaplt"
@@ -20,8 +21,8 @@
         "**Nombres de los integrantes**\n",
         "\n",
         "\n",
-        "1.   Nombre integrante 1\n",
-        "2.   Nombre integrante 2\n",
+        "1.   Jaime Andres Torres\n",
+        "2.   Tania Camila Bermudez\n",
         "\n",
         "**Número del grupo**\n",
         "\n",
