add most of Tania's contributions

--- a/lab-3/Laboratorio_3.ipynb
+++ b/lab-3/Laboratorio_3.ipynb
@@ -69,7 +69,10 @@
         "id": "X_0X1_Mdp5cS"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -87,7 +90,15 @@
         "id": "vmN6MzXztPwn"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "arreglo = [1,2,3,4]\n",
+        "multiplicacion = 1\n",
+        "\n",
+        "for i in arreglo:\n",
+        "    multiplicacion = multiplicacion * i\n",
+        "    \n",
+        "print(multiplicacion)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -105,7 +116,13 @@
         "id": "25310HzWtpJ5"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "numero = int(input(\"ingrese el numero\"))\n",
+        "factorizacion = 1\n",
+        "for i in range(1,numero+1,1):\n",
+        "    factorizacion = factorizacion * i\n",
+        "print(factorizacion)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -123,7 +140,24 @@
         "id": "ghVToDpPtrlD"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "numero = int(input(\"ingrese numero\"))\n",
+        "x = 0\n",
+        "y = 1\n",
+        "serie = [x, y]\n",
+        "\n",
+        "contador=0\n",
+        "while contador<numero:\n",
+        "        numeroactual = x + y\n",
+        "        x = y\n",
+        "        y = numeroactual\n",
+        "        serie.append(numeroactual)\n",
+        "        contador+=1\n",
+        "if numero in serie:\n",
+        "    print(\"Pertenece a la serie de Fibonacci\")\n",
+        "else:\n",
+        "    print(\"No pertenece a la serie de Fibonacci\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -141,7 +175,21 @@
         "id": "hI5f-6vqt1GB"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "ValoresUniformes = np.random.uniform(0,1,1000)\n",
+        "ValoresNormales = np.random.normal(0,1,1000)\n",
+        "\n",
+        "ValoresTotales = ValoresNormales + ValoresUniformes\n",
+        "f, ax = plt.subplots(2, 2)\n",
+        "ax = ax.ravel()\n",
+        "#plt.hist(ValoresTotales, bins=10, lebel='10')\n",
+        "ax[0].hist(ValoresTotales, bins=10, label='10')\n",
+        "ax[1].hist(ValoresTotales, bins=20, label='20')\n",
+        "ax[2].hist(ValoresTotales, bins=30, label='30')\n",
+        "ax[3].hist(ValoresTotales, bins=40, label='40')\n",
+        "\n",
+        "plt.show()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -179,7 +227,32 @@
         "id": "K8xDIeE_uYtL"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "T = 4\n",
+        "w = (2*np.pi)/T\n",
+        "\n",
+        "#desplazamiento\n",
+        "x = 5*np.cos(w*t)\n",
+        "t = np.linspace(0,8, num = 100)\n",
+        "plt.plot(t,x,'r')\n",
+        "plt.xlabel('Tiempo')\n",
+        "plt.ylabel('Desplazamiento')\n",
+        "plt.show()\n",
+        "\n",
+        "#\n",
+        "v = -5*w*np.sin(w*t)\n",
+        "plt.plot(t,v,'r')\n",
+        "plt.xlabel('Tiempo')\n",
+        "plt.ylabel('Velocidad')\n",
+        "plt.show()\n",
+        "\n",
+        "a = -5*(w**2)*np.cos(w*t)\n",
+        "plt.plot(t,a,'r')\n",
+        "plt.xlabel('Tiempo')\n",
+        "plt.ylabel('Aceleracion')\n",
+        "plt.show()"
+      ]
     },
     {
       "attachments": {},
@@ -449,7 +522,11 @@
         "id": "_1m2AN5gbOrX"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "Q1 = [[3,2],[1,2]]\n",
+        "Q2 = [[-3,1],[-2,-1]]\n",
+        "Q2 = [[0,2],[1,0]]"
+      ]
     }
   ],
   "metadata": {
@@ -471,11 +548,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.16"
+      "version": "3.11.1"
     },
     "vscode": {
       "interpreter": {
-        "hash": "cb9123c50d512ba56dbaa014c04faa439abde0a23223f9f331a9b601a8d7e665"
+        "hash": "5238573367df39f7286bb46f9ff5f08f63a01a80960060ce41e3c79b190280fa"
       }
     }
   },
