--- a/lab-5/Laboratorio_5_2.ipynb
+++ b/lab-5/Laboratorio_5_2.ipynb
@@ -91,13 +91,19 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "import scipy.optimize as op\n",
+        "\n",
         "#diccionario de actividades, nos servirá para resolver el problema.\n",
         "#muestra los costos en calorias de una hora.\n",
+        "\n",
         "actividades = {\n",
         "    \"bicicleta\":300,\n",
         "    \"gimnasio\":600,\n",
         "    \"nadar\":900\n",
-        "}"
+        "}\n",
+        "\n",
+        "#Maximo de horas\n",
+        "MAX_HORAS = 4"
       ]
     },
     {
@@ -128,7 +134,10 @@
         "id": "3IbTzblgQbNd"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "op.linprog(method=\"simplex\")\n",
+        "#"
+      ]
     },
     {
       "cell_type": "markdown",
