--- a/lab-5/Laboratorio_5_2.ipynb
+++ b/lab-5/Laboratorio_5_2.ipynb
@@ -87,20 +87,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
         "import scipy.optimize as op\n",
+        "import numpy as np\n",
         "\n",
         "#diccionario de actividades, nos servirá para resolver el problema.\n",
         "#muestra los costos en calorias de una hora.\n",
         "\n",
-        "actividades = {\n",
-        "    \"bicicleta\":300,\n",
-        "    \"gimnasio\":600,\n",
-        "    \"nadar\":900\n",
-        "}\n",
+        "actividades = [[300,0,0],[0,600,0],[0,0,900]]\n",
+        "# (300*(x))+(600*(y))+(900*(z))\n",
+        "# x >= 1\n",
+        "# x*y*z <= 4\n",
+        "\n",
+        "A = np.array([[-1,0,0],[0,-1,0],[0,0,-1]])\n",
+        "b = np.array([-4,-4,-4])\n",
+        "c = np.array([300, 600, 900])\n",
         "\n",
         "#Maximo de horas\n",
         "MAX_HORAS = 4"
@@ -129,14 +133,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "3IbTzblgQbNd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " message: The solution was determined in presolve as there are no non-trivial constraints.\n",
+            " success: True\n",
+            "  status: 0\n",
+            "     fun: 7200.0\n",
+            "       x: [ 4.000e+00  4.000e+00  4.000e+00]\n",
+            "     nit: 0\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/tmp/ipykernel_4894/676529852.py:1: DeprecationWarning: `method='simplex'` is deprecated and will be removed in SciPy 1.11.0. Please use one of the HiGHS solvers (e.g. `method='highs'`) in new code.\n",
+            "  ret_linprog = op.linprog(c, A_ub=A, b_ub=b,bounds=((1,None),(0,None),(0,None)), method=\"simplex\")\n"
+          ]
+        }
+      ],
       "source": [
-        "op.linprog(method=\"simplex\")\n",
-        "#"
+        "ret_linprog = op.linprog(c, A_ub=A, b_ub=b,bounds=((1,None),(0,None),(0,None)), method=\"simplex\")\n",
+        "print(ret_linprog)\n"
       ]
     },
     {
