add more stuffs

--- a/tarea2/T2.ipynb
+++ b/tarea2/T2.ipynb
@@ -36,7 +36,10 @@
     "\n",
     "A = np.array([[6,4],[1,2],[0,1]])\n",
     "b = np.array([-24,-2,-2])\n",
-    "c = np.array([5, 4])"
+    "c = np.array([5, 4])\n",
+    "\n",
+    "ret_linprog = op.linprog(c, A_ub=A, b_ub=b,bounds=((0,None),(0,None)), method=\"simplex\")\n",
+    "print(ret_linprog)"
    ]
   },
   {
